--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -1,4 +1,3 @@
-
 # Gopkg.toml example
 #
 # Refer to https://github.com/golang/dep/blob/master/docs/Gopkg.toml.md
@@ -17,14 +16,31 @@
 #   source = "github.com/myfork/project2"
 #
 # [[override]]
-#  name = "github.com/x/y"
-#  version = "2.4.0"
+#   name = "github.com/x/y"
+#   version = "2.4.0"
+#
+# [prune]
+#   non-go = false
+#   go-tests = true
+#   unused-packages = true
 
 
 [[constraint]]
   branch = "master"
-  name = "github.com/joaosoft/errors"
+  name = "github.com/joaosoft/logger"
 
 [[constraint]]
   branch = "master"
-  name = "github.com/joaosoft/writers"
+  name = "github.com/joaosoft/mapper"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/lib/pq"
+
+[[constraint]]
+  name = "github.com/oklog/ulid"
+  version = "0.3.0"
+
+[prune]
+  go-tests = true
+  unused-packages = true
