--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ jobs:
       os: linux
       go: master
       script:
-        - go test -v ./...
+        - go test ...
 
       after_success:
         - bash <(curl -s https://codecov.io/bash)
