--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,15 @@
 ---
 language: go
-go_import_path: github.com/joaosoft/event-sourcing
-sudo: false
-notifications:
-  email: joaosoft@gmail.com
-jobs:
-  include:
-    - stage: test
-      install:
-        - go get -u github.com/golang/dep/cmd/dep
-        - dep ensure
-      os: linux
-      go: master
-      script:
-        - go build ./...
-        - go test ./...
-        - go test -coverprofile=coverage.txt -covermode=atomic ./...
-        - go test ./... -bench=. -cpu=1,2,4,8
+go:
+  - 1.9
+install:
+  - go get github.com/tools/godep
+  - godep restore
+branches:
+  only:
+  - master
+script:
+  - go build ./...
 
       after_success:
         - bash <(curl -s https://codecov.io/bash)
