--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,5 +22,6 @@ jobs:
       - checkout
 
       # specify any bash command here prefixed with `run: `
-      - run: go get -v -t -d ./...
-      - run: go test -v ./...
+      - run: go get -u -v -t github.com/Masterminds/glide
+      - run: glide install -v
+      - run: go build -v github.com/joaosoft/event-sourcing
