--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,6 @@ jobs:
       - checkout
 
       # specify any bash command here prefixed with `run: `
-      - run: go get -u golang.org/x/tools/cmd/goimports
+      - run: go get -u github.com/golang/dep/cmd/dep
       - run: dep ensure -vendor-only -v
       - run: go build -v
