--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,5 +23,5 @@ jobs:
 
       # specify any bash command here prefixed with `run: `
       - run: go get -u github.com/golang/dep/cmd/dep
-      - run: dep ensure -vendor-only -v
+      - run: dep ensure -v
       - run: go build -v example.go
