--- a/.travis.yml
+++ b/.travis.yml
@@ -5,14 +5,17 @@ notifications:
   email: joaosoft@gmail.com
 jobs:
   include:
-    - stage: test
+    - stage: tester
       install:
         - go get -u github.com/golang/dep/cmd/dep
         - dep ensure
       os: linux
       go: master
       script:
-        - go build -v
+        - go build .
+        - go tester .
+        - go tester -coverprofile=coverage.txt -covermode=atomic .
+        - go tester . -bench=. -cpu=1,2,4,8
 
       after_success:
         - bash <(curl -s https://codecov.io/bash)
