--- a/config/dbconfig.yml
+++ b/config/dbconfig.yml
@@ -1,5 +1,5 @@
 development:
   dialect: postgres
-  datasource: user=user password=password dbname=eventsourcing sslmode=disable
+  datasource: user=postgres password= dbname=eventsourcing sslmode=disable
   dir: schema/db/migrations/postgres
   table: migrations
