--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ notifications:
   email: joaosoft@gmail.com
 jobs:
   include:
-    - stage: tester
+    - stage: test
       install:
         - go get -u github.com/golang/dep/cmd/dep
         - dep ensure
@@ -13,9 +13,9 @@ jobs:
       go: master
       script:
         - go build .
-        - go tester .
-        - go tester -coverprofile=coverage.txt -covermode=atomic .
-        - go tester . -bench=. -cpu=1,2,4,8
+        - go test .
+        - go test -coverprofile=coverage.txt -covermode=atomic .
+        - go test . -bench=. -cpu=1,2,4,8
 
       after_success:
         - bash <(curl -s https://codecov.io/bash)
