--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ jobs:
         #- go test ./...
         #- go test -coverprofile=coverage.txt -covermode=atomic ./...
         #- go test ./... -bench=. -cpu=1,2,4,8
-        - go tool vet -all ./common ./config ./examples ./models ./schema ./storage
+        - go list ./... | grep -v vendor | xargs go vet -v
 
       after_success:
         - bash <(curl -s https://codecov.io/bash)
