--- a/config/app.local.json
+++ b/config/app.local.json
@@ -5,13 +5,13 @@
     },
     "db": {
       "driver": "postgres",
-      "datasource": "postgres://user:password@localhost:7000/postgres?sslmode=disable&search_path=public"
+      "datasource": "postgres://user:password@localhost:7000/postgres?sslmode=disable&search_path=eventsourcing"
     },
     "migration": {
       "path": "schema/db/migrations/postgres",
       "db": {
         "driver": "postgres",
-        "datasource": "postgres://user:password@localhost:7000/postgres?sslmode=disable&search_path=public"
+        "datasource": "postgres://user:password@localhost:7000/postgres?sslmode=disable&search_path=eventsourcing"
       },
       "log": {
         "level": "info"
