--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,8 @@ jobs:
   include:
     - stage: test
       install:
-#        - go get -u github.com/golang/dep/cmd/dep
-#        - dep ensure
-        - go get github.com/joaosoft/dependency
-        - dependency get
+        - go mod tidy
+        - go mod vendor
       os: linux
       go: master
       script:
